# filter

./: .dir-locals.el  README.md  TODO.org  filter.cabal  space-test.txt  stack.yaml
app/: Main.hs
assets/: simple.txt
bench/: Instructions.hs  Space.hs  Time.hs
camel-case/: README.md  camel-case.cabal  lazy100.txt  lazy1000.txt  lazy10000.txt  lazy100000.txt  profile.prof  tracing.strace
camel-case/app/: Main.hs
camel-case/bench/: Time.hs
camel-case/src/bytestring/: CamelCase.hs
camel-case/src/inplace/: CamelCase.hs
camel-case/src/inplace-read/: CamelCase.hs
camel-case/src/inplace-read/System/IO/: Efficient.hs
camel-case/src/string/: CamelCase.hs
camel-case/test/: Profile.hs  Space.hs  Time.hs  Tracing.hs
reports/: time-bench.html  time-bench.txt
src/: UnsafeBuffer.hs
src/Filter/: Blue.hs  Gold.hs  Green.hs  Lime.hs  Pink.hs  Silver.hs
src/blue/: Filter.hs
src/gold/: Filter.hs
src/green/: Filter.hs
src/lime/: Filter.hs
src/pink/: Filter.hs
src/silver/: Filter.hs
test/: Existential.hs  Instructions.hs  Property.hs  Space.hs  Trace.hs
