name:                filter
version:             0.1.0.0
license:             BSD3
author:              Chris Done
maintainer:          git@chrisdone.com
copyright:           Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag pink
  description: Use the simplest naive implementation.
  manual: True
  default: True

flag blue
  description: Bytestring naive filter.
  manual: True
  default: False

executable filter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  build-depends:       base,
                       filter

library
  exposed-modules:     Filter
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  if flag(blue)
     hs-source-dirs:   src/blue
  else
     hs-source-dirs:   src/pink
  build-depends:       base,
                       bytestring
