name:                filter
version:             0.1.0.0
license:             BSD3
author:              Chris Done
maintainer:          git@chrisdone.com
copyright:           Chris Done
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag pink
  description: Use the simplest naive implementation.
  manual: True
  default: True

flag blue
  description: Bytestring naive filter.
  manual: True
  default: False

flag silver
  description: Lazy version of blue.
  manual: True
  default: False

flag green
  description: Line-by-line search.
  manual: True
  default: False

flag gold
  description: Mutable buffer.
  manual: True
  default: False

executable filter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  build-depends:       base,
                       filter

library
  exposed-modules:
    Filter
    Filter.Blue
    Filter.Gold
    Filter.Green
    Filter.Pink
    Filter.Silver
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
  hs-source-dirs:   src
  if flag(gold)
     hs-source-dirs:   src/gold
  else
     if flag(green)
        hs-source-dirs:   src/green
     else
        if flag(silver)
           hs-source-dirs:   src/silver
        else
          if flag(blue)
             hs-source-dirs:   src/blue
          else
             hs-source-dirs:   src/pink
  build-depends:       base,
                       bytestring,
                       vector,
                       conduit,
                       conduit-extra,
                       resourcet

test-suite space
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Space.hs
  build-depends:       base
                     , filter
                     , weigh >= 0.1.14
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
