name:                camel-case
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chrisdone/camel-case#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          git@chrisdone.com
copyright:           Chris Done
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag string
  description: Use the src/string implementation.
  manual: True
  default: False

flag bytestring
  description: Use the src/bytestring implementation.
  manual: True
  default: False

flag inplace-read
  description: Use the src/bytestring implementation.
  manual: True
  default: False

flag inplace
  description: Use the src/bytestring implementation.
  manual: True
  default: True

library
  if flag(inplace-read)
    hs-source-dirs:    src/inplace-read
  else
    if flag(string)
      hs-source-dirs:    src/string
    else
      if flag(bytestring)
        hs-source-dirs:    src/bytestring
      else
        hs-source-dirs:    src/inplace
  ghc-options:         -Wall -O2
  exposed-modules:     CamelCase
  other-modules:       System.IO.Efficient
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       bytestring
  default-language:    Haskell2010

executable camel-case
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2
  build-depends:       base
                     , camel-case
  default-language:    Haskell2010

executable tracing
  hs-source-dirs:      test
  main-is:             Tracing.hs
  ghc-options:         -Wall -O2 -static -optl-static
  build-depends:       base
                     , camel-case
  default-language:    Haskell2010

test-suite profile
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Profile.hs
  build-depends:       base
                     , camel-case
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite space
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Space.hs
  build-depends:       base
                     , camel-case
                     , weigh
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

test-suite instructions
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Instructions.hs
  build-depends:       base
                     , camel-case
                     , cpu-instruction-counter
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

benchmark time
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Time.hs
  build-depends:       base
                     , camel-case
                     , criterion
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisdone/camel-case
